--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.23"
 pylint = "^3.0.2"
 black = "^23.12.0"
 pytest = "^7.4.3"
+mysql-connector-python = "^8.2.0"
 
 
 [build-system]
@@ -60,13 +61,7 @@ max-module-lines = 1000
 
 [tool.pylint."MESSAGES CONTROL"]
 
-confidence = [
-    "HIGH",
-    "CONTROL_FLOW",
-    "INFERENCE",
-    "INFERENCE_FAILURE",
-    "UNDEFINE",
-]
+confidence = "HIGH"
 disable = [
     "raw-checker-failed",
     "bad-inline-option",
