--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pylint = "^3.0.2"
 black = "^23.12.0"
 pytest = "^7.4.3"
 mysql-connector-python = "^8.2.0"
+icecream = "^2.1.3"
 
 
 [build-system]
