--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ black = "^23.12.0"
 pytest = "^7.4.3"
 mysql-connector-python = "^8.2.0"
 tenacity = "^8.2.3"
+flask-bcrypt = "^1.0.1"
+jwt = "^1.3.1"
+pyjwt = "^2.8.0"
 
 
 [build-system]
