--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ jwt = "^1.3.1"
 pyjwt = "^2.8.0"
 pyotp = "^2.9.0"
 fastapi = "^0.111.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
