--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyjwt = "^2.8.0"
 pyotp = "^2.9.0"
 fastapi = "^0.111.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pymysql = "^1.1.1"
 
 
 [build-system]
