--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pyotp = "^2.9.0"
 fastapi = "^0.111.0"
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pymysql = "^1.1.1"
+icecream = "^2.1.3"
 
 
 [build-system]
